--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "skyline-sequelize",
   "description": "Multi dialect ORM for Node.JS/io.js. Modify By Skyline",
-  "version": "0.12.5",
+  "version": "3.12.1-fix.0",
   "author": "Sascha Depold <sascha@depold.com>",
   "contributors": [
     {
